--- a/test2/src/html/index.html
+++ b/test2/src/html/index.html
@@ -2,8 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Express and Webpack App</title>
+    <title>Screaming Goat audio app</title>
     <link rel="shortcut icon" href="#">
+    <link
+        rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+        crossorigin="anonymous"
+    />
 </head>
 <body>
     <div id="react-container"></div>
