Very basic website layout done

--- a/test2/src/html/index.html
+++ b/test2/src/html/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>Screaming Goat audio app</title>
-    <link rel="shortcut icon" href="#">
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link
         rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -12,6 +13,7 @@
     />
 </head>
 <body>
-    <div id="react-container"></div>
+    <div id="nav-bar"></div>
+    <div id='react-container'></div>
 </body>
 </html>
