Added the logo and favicon, also added a play/pause all tracks button

--- a/app/src/html/index.html
+++ b/app/src/html/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <img src="../img/title.svg" width="35%"/>
     <div id='nav-bar'></div>
     <div id='react-container'></div>
 </body>
